[gd_scene load_steps=4 format=3 uid="uid://fikc7l27ixws"]

[ext_resource type="Script" path="res://clone.gd" id="1_y0e7e"]
[ext_resource type="Texture2D" uid="uid://eihqmgwdcwlx" path="res://icon.svg" id="2_yyo4g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkk82"]
size = Vector2(85, 85)

[node name="Clone" type="Area2D"]
script = ExtResource("1_y0e7e")

[node name="CloneSelectableArea" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_jkk82")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.478431, 1, 0, 1)
texture = ExtResource("2_yyo4g")

[node name="CloneTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="CloneTimer" to="." method="_on_clone_timer_timeout"]
